{
  "version": 4,
  "terraform_version": "0.15.0",
  "serial": 218,
  "lineage": "99e7971b-c645-f6b9-172c-b36e5344a16f",
  "resources": [
    {
      "module": "module.hasura",
      "mode": "managed",
      "type": "aws_alb",
      "name": "hasura",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "hasura-ap-southeast-1-hasura-apphasia.com",
                "enabled": true,
                "prefix": "alb"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:351624046155:loadbalancer/app/hasura-alb/0210fd3676f632e5",
            "arn_suffix": "app/hasura-alb/0210fd3676f632e5",
            "dns_name": "hasura-alb-1619877232.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:351624046155:loadbalancer/app/hasura-alb/0210fd3676f632e5",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "hasura-alb",
            "security_groups": [
              "sg-065ddd7c5cf2342ba"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05659d5640c40caca"
              },
              {
                "subnet_id": "subnet-0b084b60571837215"
              }
            ],
            "subnets": [
              "subnet-05659d5640c40caca",
              "subnet-0b084b60571837215"
            ],
            "vpc_id": "vpc-0f4f9f44dff7ed465",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "module.hasura.aws_s3_bucket.hasura",
            "module.hasura.aws_security_group.hasura_alb",
            "module.hasura.aws_subnet.hasura_public",
            "module.hasura.aws_vpc.hasura",
            "module.hasura.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.hasura",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "hasura",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:351624046155:listener/app/hasura-alb/0210fd3676f632e5/0f0d491c2b9927c3",
            "certificate_arn": "arn:aws:acm:ap-southeast-1:351624046155:certificate/37b70e27-6b4b-4cb0-afe5-1ed602aa6c4c",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:351624046155:targetgroup/hasura-alb/eeaa0c3b3cd127d5",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:351624046155:listener/app/hasura-alb/0210fd3676f632e5/0f0d491c2b9927c3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:351624046155:loadbalancer/app/hasura-alb/0210fd3676f632e5",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.hasura.aws_acm_certificate.hasura",
            "module.hasura.aws_alb.hasura",
            "module.hasura.aws_alb_target_group.hasura",
            "module.hasura.aws_s3_bucket.hasura",
            "module.hasura.aws_security_group.hasura_alb",
            "module.hasura.aws_subnet.hasura_public",
            "module.hasura.aws_vpc.hasura",
            "module.hasura.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.hasura",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "hasura",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:351624046155:targetgroup/hasura-alb/eeaa0c3b3cd127d5",
            "arn_suffix": "targetgroup/hasura-alb/eeaa0c3b3cd127d5",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/healthz",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:351624046155:targetgroup/hasura-alb/eeaa0c3b3cd127d5",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "hasura-alb",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0f4f9f44dff7ed465"
          },
          "dependencies": [
            "module.hasura.aws_vpc.hasura"
          ]
        }
      ]
    },
    {
      "module": "module.hasura",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "hasura",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:351624046155:internet-gateway/igw-04c6aac1bff651d05",
            "id": "igw-04c6aac1bff651d05",
            "owner_id": "351624046155",
            "tags": {
              "Name": "hasura"
            },
            "vpc_id": "vpc-0f4f9f44dff7ed465"
          },
          "dependencies": [
            "module.hasura.aws_vpc.hasura"
          ]
        }
      ]
    },
    {
      "module": "module.hasura",
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04c6aac1bff651d05",
            "id": "r-rtb-0f9d50451e0d851d91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f9d50451e0d851d9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.hasura.aws_internet_gateway.hasura",
            "module.hasura.aws_vpc.hasura"
          ]
        }
      ]
    },
    {
      "module": "module.hasura",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "hasura_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:351624046155:security-group/sg-065ddd7c5cf2342ba",
            "description": "Allow access on port 443 only to ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-065ddd7c5cf2342ba",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "hasura-alb",
            "name_prefix": "",
            "owner_id": "351624046155",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0f4f9f44dff7ed465"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.hasura.aws_vpc.hasura"
          ]
        }
      ]
    },
    {
      "module": "module.hasura",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "hasura_ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:351624046155:security-group/sg-0d55bc10a46616d36",
            "description": "allow inbound access from the ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d55bc10a46616d36",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-065ddd7c5cf2342ba"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "hasura-tasks",
            "name_prefix": "",
            "owner_id": "351624046155",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0f4f9f44dff7ed465"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.hasura.aws_vpc.hasura",
            "module.hasura.aws_security_group.hasura_alb"
          ]
        }
      ]
    },
    {
      "module": "module.hasura",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "hasura_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:351624046155:security-group/sg-0b89b31bd2f381c0d",
            "description": "allow inbound access from the hasura tasks only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b89b31bd2f381c0d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d55bc10a46616d36"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "hasura-rds",
            "name_prefix": "",
            "owner_id": "351624046155",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0f4f9f44dff7ed465"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.hasura.aws_security_group.hasura_ecs",
            "module.hasura.aws_vpc.hasura"
          ]
        }
      ]
    },
    {
      "module": "module.hasura",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hasura_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:351624046155:subnet/subnet-02499fa41c28a93c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "172.17.0.0/24",
            "id": "subnet-02499fa41c28a93c4",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "351624046155",
            "tags": {
              "Name": "hasura #0 (private)"
            },
            "vpc_id": "vpc-0f4f9f44dff7ed465"
          },
          "dependencies": [
            "module.hasura.aws_vpc.hasura",
            "module.hasura.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:351624046155:subnet/subnet-06dfa4d337572ff09",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "172.17.1.0/24",
            "id": "subnet-06dfa4d337572ff09",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "351624046155",
            "tags": {
              "Name": "hasura #1 (private)"
            },
            "vpc_id": "vpc-0f4f9f44dff7ed465"
          },
          "dependencies": [
            "module.hasura.aws_vpc.hasura",
            "module.hasura.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.hasura",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hasura_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:351624046155:subnet/subnet-05659d5640c40caca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "172.17.2.0/24",
            "id": "subnet-05659d5640c40caca",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "351624046155",
            "tags": {
              "Name": "hasura #2 (public)"
            },
            "vpc_id": "vpc-0f4f9f44dff7ed465"
          },
          "dependencies": [
            "module.hasura.aws_vpc.hasura",
            "module.hasura.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:351624046155:subnet/subnet-0b084b60571837215",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "172.17.3.0/24",
            "id": "subnet-0b084b60571837215",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "351624046155",
            "tags": {
              "Name": "hasura #3 (public)"
            },
            "vpc_id": "vpc-0f4f9f44dff7ed465"
          },
          "dependencies": [
            "module.hasura.aws_vpc.hasura",
            "module.hasura.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.hasura",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "hasura",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:351624046155:vpc/vpc-0f4f9f44dff7ed465",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.17.0.0/16",
            "default_network_acl_id": "acl-0580a95c57488aa23",
            "default_route_table_id": "rtb-0f9d50451e0d851d9",
            "default_security_group_id": "sg-0525ece9102b911a5",
            "dhcp_options_id": "dopt-eb4b4c8c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f4f9f44dff7ed465",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f9d50451e0d851d9",
            "owner_id": "351624046155",
            "tags": {
              "Name": "hasura"
            }
          }
        }
      ]
    }
  ]
}